Blocks now drop the correct loot
Mod is in a publishable state! However, I still want to template stuff out.