@@ -1,17 +1,29 @@
 package net.hexagonelle.applesaplings.datagen.loot;
 
+import net.minecraft.core.HolderLookup;
 import net.minecraft.data.PackOutput;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParamSets;
 
+import java.util.Collections;
 import java.util.List;
-import java.util.Set;
+import java.util.concurrent.CompletableFuture;
 
-//public class ModLootTableProvider{
-//
-//	public static LootTableProvider create(PackOutput output) {
-//		return new LootTableProvider(output, Set.of(), List.of(
-//				new LootTableProvider.SubProviderEntry(ModBlockLootTables::new, LootContextParamSets.BLOCK)
-//		));
-//	}
-//}
+public class ModLootTableProvider{
+
+	public static LootTableProvider create(
+		PackOutput packOutput,
+		CompletableFuture<HolderLookup.Provider> lookupProvider
+	){
+		return new LootTableProvider(
+			packOutput,
+			Collections.emptySet(),
+			List.of(
+				new LootTableProvider.SubProviderEntry(
+					ModBlockLootTables::new,
+					LootContextParamSets.BLOCK)
+			),
+			lookupProvider
+		);
+	}
+}
